package com.somare.assessment.entity;


import com.somare.assessment.config.DefaultConfigs;
import com.somare.assessment.infraestructure.common.entity.DefaultEntity;
import lombok.AllArgsConstructor;
import lombok.Data;
import lombok.EqualsAndHashCode;
import lombok.NoArgsConstructor;

import javax.persistence.Entity;
import javax.persistence.Table;
import javax.validation.constraints.NotBlank;

@Data
@Entity
@Table(schema = DefaultConfigs.DEFAULT_SCHEMA)
@AllArgsConstructor
@NoArgsConstructor
@EqualsAndHashCode(callSuper = true)
public class ActivityHelpType extends com.somare.assessment.infraestructure.common.entity.Entity implements DefaultEntity<ActivityHelpType> {

    @NotBlank
    private String name;

    @Override
    public void update(ActivityHelpType entity) {
        this.name = entity.name;
    }
}