package com.somare.assessment.entity;

public enum ObjectiveValue {

    BAD,
    SUCCESS,
    SUCCESS_WITH_HELP

}
